--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bebepickbot",
   "version": "1.0.0",
-  "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node server.js"
+    "start": "node bot.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "googleapis": "^170.0.0"
   }
 }
