--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "bebepickbot",
   "version": "1.0.0",
   "type": "commonjs",
+  "main": "server.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "googleapis": "^170.0.0"
+    "express": "^4.18.2"
   }
 }
