--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
-  "name": "bebepickbot",
-  "version": "1.0.0",
-  "type": "commonjs",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.6.0",
+    "express": "^4.18.2",
+    "googleapis": "^133.0.0"
   }
 }
